# dodo-interview

./: .dockerignore  API.md  Cargo.toml  DESIGN.md  Dockerfile  Readme.md  api-test.html  docker-compose.yml
.github/: secret_scanning.yml
migrations/: initial_setup.sql  seed_data.sql
scripts/: consumer.py
src/: lib.rs  main.rs  models.rs  routes.rs  state.rs
src/handlers/: accounts.rs  auth.rs  health.rs  mod.rs  user.rs  webhooks.rs
src/middlewares/: auth.rs
src/services/: accounts.rs  mod.rs  webhooks.rs
tests/: api_tests.rs
