[package]
name = "dodointerview"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
http = "1.4.0"
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5", features = ["util"] }
