[package]
name = "dodointerview"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
bcrypt = "0.15"
dotenvy = "0.15.7"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
http = "1.4.0"
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5", features = ["util"] }
